# FREEVPN

./: .gitignore  CircularButton.cpp  CircularButton.h  FreeVpn.upp  FreeVpnClient.h  FreeVpnClient.lay  README.md  SignIn.cpp  main.cpp
Common/: GlobalConst.h
Common/Cedar/: Cedar.c  Cedar.h  CedarPch.h  CedarType.h  Connection.c  Connection.h  Hub.h  MyConnection.c  MyConnection.h  Nat.h  SecureNAT.c  SecureNAT.h  Session.h  Virtual.c  Virtual.h
Common/ECDH/: curve25519-donna.c  curve25519.h
Common/JANSSON/: hashtable.c  jansson.h  lookup3.h  utf.h  value.c
Common/JWT/: jwt-openssl.c  jwt.c  jwt.h  main-auth.c
Common/Mayaqua/: Cfg.c  Cfg.h  Encrypt.c  Internat.c  Kernel.c  Kernel.h  MayaType.h  Mayaqua.c  Mayaqua.h  Memory.c  Memory.h  Microsoft.c  Microsoft.h  Network.c  TcpIp.c  TcpIp.h  Tick64.c  Unix.c  Unix.h  Win32.c
FreeVPNServer/: CMakeLists.txt  FreeVPNServer.sln  FreeVPNServer.vcxproj  FreeVPNServer.vcxproj.filters  Resource.aps  Resource.rc  resource1.h
FreeVPNServer/Win32/driver/: addtap.bat  deltapall.bat  tapcon.sys
FreeVPNServer/linux/: tuntap.c  tuntap_old.c
include/: htree.h  n2n.h  n2n_define.h  n2n_keyfile.h  n2n_transforms.h  n2n_typedefs.h  n2n_wire.h  winconfig.h
src/: cc20.c  client.c  client_utils.c  htree.c  init_script.c  n2n.c  n2n_connection.c  routing.c  sn.c  transform_cc20.c  tuntap_linux.c  tuntap_osx.c  wire.c
win32/: installation.c  installation.h  n2n_win32.h  win_main.c  wintap.c  wintap.h
